--- a/themes/default.css
+++ b/themes/default.css
@@ -3,8 +3,8 @@
  * @see https://github.com/poole/poole
  */
 
-@import url('http://fonts.googleapis.com/css?family=Average');
-@import url('http://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url('https://fonts.googleapis.com/css?family=Average');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 
 * {
@@ -308,5 +308,5 @@ footer ul li {
 }
 
 footer ul li:before {
-		content: "\2192 \0020"; /* caractýre UTF-8 */
+		content: "\2192 \0020"; /* caractÃ½re UTF-8 */
 }
